--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.1",
+    "moment": "^2.29.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nexmo": "^2.9.1",
